# os

./: .gitignore  CMakeLists.txt  Makefile  README.md  kmain.c  link.ld  loader.asm  loader.s  runner.sh
asm/: gdt.s  loader.s  stdio.s
c_files/includes/: descriptor.h  framebuffer.md  gdt.h  gdt.md  log.h  serial.h  serial.md  stdio.h  string.h
c_files/src/: gdt.c  kmain.c  log.c  serial.c  stdio.c  string.c
iso/boot/grub/: menu.lst
